--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Sweet Shop</title>
 </head>
 <body>
-    <p>HEllo WORLD</p>
+  <h1>Welcome to the Sweet Shop</h1>
+  <a href="/sweets">See All Sweets</a>
 </body>
 </html>
